--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buffer-json-encoding": "^1.0.2",
     "emittery": "^0.6.0",
     "end-of-stream": "^1.4.4",
+    "nanocustomassert": "^1.0.0",
     "nanoerror": "^1.0.0",
     "nanomessage": "^5.1.0"
   },
