--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "end-of-stream": "^1.4.4",
     "nanocustomassert": "^1.0.0",
     "nanoerror": "^1.1.0",
-    "nanomessage": "^5.1.0"
+    "nanomessage": "^5.1.0",
+    "nanoresource-promise": "^1.2.0"
   },
   "devDependencies": {
     "@geut/chan": "^2.0.0",
