--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "end-of-stream": "^1.4.4",
     "nanocustomassert": "^1.0.0",
     "nanoerror": "^1.1.0",
-    "nanomessage": "^5.3.0",
-    "nanoresource-promise": "^1.2.1"
+    "nanomessage": "^6.0.0",
+    "nanoresource-promise": "^2.0.0",
+    "streamx": "^2.6.4"
   },
   "devDependencies": {
     "@geut/chan": "^2.0.0",
