--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tiny rpc on top of nanomessage",
   "main": "index.js",
   "files": [
-    "lib",
+    "src",
     "index.js"
   ],
   "scripts": {
