--- a/package.json
+++ b/package.json
@@ -3,51 +3,62 @@
   "version": "5.0.1",
   "description": "Tiny rpc on top of nanomessage",
   "type": "module",
+  "main": "./dist/index.cjs",
   "exports": {
-    ".": "./src/index.js",
-    "./use-socket": "./src/use-socket.js",
-    "./errors": "./src/errors.js"
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./src/index.js"
+    },
+    "./package.json": "./package.json"
   },
   "files": [
+    "dist",
     "src"
   ],
   "scripts": {
     "benchmark": "node tests/benchmark.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
+    "build": "tsup",
+    "test": "uvu -i create -i benchmark",
     "posttest": "npm run lint",
-    "lint": "standard \"**/*.js\"",
-    "version": "chan release --allow-yanked ${npm_package_version} && git add .",
-    "prepublishOnly": "npm test"
+    "lint": "standard",
+    "prepublishOnly": "npm test && npm run build",
+    "coverage": "c8 uvu -i create -i benchmark",
+    "make-badge": "coverage-badges"
   },
   "dependencies": {
-    "emittery": "^0.6.0",
     "end-of-stream": "^1.4.4",
+    "eventemitter2": "^6.4.9",
     "nanocustomassert": "^1.0.0",
-    "nanoerror": "^1.1.0",
-    "nanomessage": "^11.0.0",
-    "nanoresource-promise": "^2.0.0",
-    "varint": "^5.0.0"
+    "nanoerror": "^1.3.0",
+    "nanomessage": "^11.1.1",
+    "nanoresource-promise": "^3.1.0"
   },
   "devDependencies": {
-    "@geut/chan": "^2.0.0",
     "abortcontroller-polyfill": "^1.7.3",
-    "enhanced-resolve": "^5.8.2",
-    "jest": "^27.0.4",
-    "nanobench": "^2.1.1",
-    "standard": "^16.0.1",
-    "streamx": "^2.6.4"
+    "c8": "^7.12.0",
+    "coverage-badges": "^1.0.7",
+    "standard": "^17.0.0",
+    "streamx": "^2.6.4",
+    "tinybench": "^2.3.1",
+    "tinyspy": "^1.0.2",
+    "tsup": "^6.3.0",
+    "uvu": "^0.5.6"
   },
-  "jest": {
-    "resolver": "./tests/jest-resolver.cjs",
-    "testEnvironment": "jest-environment-node",
-    "transform": {},
-    "testMatch": [
-      "**/tests/**/*.test.js"
-    ]
+  "tsup": {
+    "entry": [
+      "src/index.js"
+    ],
+    "format": [
+      "cjs",
+      "iife"
+    ],
+    "globalName": "NanomessageRPC",
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true
   },
   "standard": {
     "env": [
-      "jest",
       "node",
       "browser"
     ]
